fixing carousel to not overlap cart

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,13 +1,3 @@
-body {
-  background-color: var(--light);
-}
-
-.carousel img {
-  padding: 1rem;
-  height: 50%;
-  width: 50%;
-}
-
 .flex-row {
     display: flex;
     flex-wrap: wrap;
